force-app/main/default/objects/stripeGC__Async_Error_Log__e/stripeGC__Async_Error_Log__e.object-meta.xml
<CustomObject>
    <description>Captures processing errors asynchronously when callouts fail, to avoid transaction blocking and ensure error logging outside the main transaction.</description>
    <label>Async Error Log</label>
    <pluralLabel>Async Error Logs</pluralLabel>
</CustomObject>