force-app/main/default/objects/stripeGC__Async_Error_Log__e/fields/stripeGC__Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Action_Taken__c</fullName>
    <label>Action Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>