force-app/main/default/objects/stripeGC__Async_Error_Log__e/fields/stripeGC__Message__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>