force-app/main/default/objects/stripeGC__Async_Error_Log__e/fields/stripeGC__Source__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>